--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.12",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.24",
     "json-server": "^0.16.3",
     "typescript": "^4.6.2"
